added api for user registration
