# src/app/models/account.ts
@@ -1,0 +1,27 @@
+import { z } from "zod";
+
+export const SmartAccountRegisterRequestSchema = z.object({
+  id: z.number(),
+  userAddress: z.string(),
+  accountAddress: z.string(),
+  chainId: z.number(),
+  factoryAddress: z.string(),
+});
+
+export type SmartAccountRegisterRequest = z.infer<
+  typeof SmartAccountRegisterRequestSchema
+>;
+
+export const RegisterSessionKeyRequestSchema = z.object({
+  sessionKeyAddress: z.string(),
+  smartAccountAddress: z.string(),
+  chainId: z.number(),
+  approvedCallTargets: z.array(z.string()),
+  nativeTokenLimit: z.number(),
+  startDate: z.date(),
+  expirationDate: z.date(),
+});
+
+export type RegisterSessionKeyRequest = z.infer<
+  typeof RegisterSessionKeyRequestSchema
+>;
